<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:background="@drawable/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                app:srcCompat="@drawable/logo" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/Welcome_Back"
                android:layout_marginRight="60dp"
                android:layout_marginTop="-40dp"
                android:textColor="@android:color/white"
                android:paddingBottom="30dp"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center|left"
            android:layout_marginTop="40dp"
            android:background="@drawable/textinput"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/mail" />


            <EditText
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:layout_marginLeft="5dp"
                android:hint="Email"
                android:inputType="textPersonName"
                android:text=""
                />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:background="@drawable/textinput"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/key" />
            <EditText
                android:id="@+id/userPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:hint="password"
                android:inputType="textPassword"
                android:text=""
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/noAccount"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:text="@string/dontHaveAccount"
                android:textSize="18sp"
             />


            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:clickable="true"
                android:gravity="center|right"
                android:linksClickable="true"
                android:text="@string/signup"
                android:textColor="@color/design_default_color_primary"
                android:textColorLink="@color/design_default_color_primary"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/Login"
            android:textColor="@android:color/white"
         />


    </LinearLayout>

</RelativeLayout>