...
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:completionThreshold="1"
            android:hint="@string/enter_meal" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="8"
            android:hint="@string/enter_weight_in_grams"
...
