...

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/input_meal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button"
                android:text="Add Meal"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
...
