...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#848F9C"
    tools:context=".MultipleFoodsPopup">

    <Button
        android:id="@+id/multiMealBack"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/back"
...
